<resources>
    <string name="app_name">Travel Guide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="splash_app_logo">App Logo</string>
    <string name="action_settings">Settings</string>

    <!-- Nav Bar -->
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_countries">Countries</string>
    <string name="nav_bar_cities">Cities</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_temp">Temperature</string>

    <string name="fav_location">Favourite Location</string>

    <!-- Country List -->
    <string name="country_list_search">Search</string>
    <string name="country_list_fave">Favourites</string>

    <!-- Country page -->
    <string name="button_fav_toggle">Toggle Favourite</string>
    <string name="button_wiki_link">Go to Wikipedia Page</string>
    <string name="button_notes">Show Notes</string>
    <string name="open_map">Open in Maps</string>
    <string name="country_details">Country Details</string>
    <string name="country_capital">Capital City</string>
    <string name="country_language">Language</string>
    <string name="country_currency">Currency</string>
    <string name="country_main_cities">Main Cities</string>
    <string name="country_notes">My Notes</string>

    <!-- Notes -->
    <string name="notes_title">Notes - </string>
    <string name="notes_ok">OK</string>
    <string name="notes_delete">Delete Note</string>
    <string name="notes_delete_confirm">Are you sure you want to delete this note?</string>
    <string name="notes_cancel">Cancel</string>

    <!-- City page -->
    <string name="city_population">Population</string>
    <string name="city_of_country">Country</string>
    <string name="city_weather">Weather</string>
    <string name="city_mainairport">Main Airport</string>
    <string name="button_airport_map">Open Airport Location in Maps</string>
    <string name="city_notes">My Notes</string>
    <string name="city_details">City Details</string>

    <!-- Home page -->
    <string name="home_loading_weather">Loading Weather..</string>
    <string name="home_weather_title">Current Weather</string>
    <string name="home_loc_error">Error: Unable to find your location</string>
    <string name="home_iv_loc_error_label">Location Error</string>
    <string name="home_req_error">Error: Unable to get weather data</string>
    <string name="home_iv_weather_icon">Weather Icon</string>
    <string name="home_iv_req_error">Data Error</string>
    <string name="home_button_cities">Cities</string>
    <string name="home_button_countries">Countries</string>
    <string name="home_fave_card_title">Favourites</string>
    <string name="home_add_faves">Add some favourites to see them here!</string>
    <string name="home_city_button">CITIES</string>
    <string name="home_country_button">COUNTRIES</string>
    <string name="city_icon">City Icon</string>
    <string name="country_icon">Country Icon</string>
    <string name="home_fave_icon">Favourite Location Icon</string>

    <!-- Weather -->
    <string name="location_icon">Location Icon</string>
    <string name="therm_icon">Thermometer Icon</string>

    <!-- Settings -->
    <string name="settings_temp">Use Celsius</string>
    <string name="temp_key_celsius">temp_celsius</string>
    <string name="settings_c">Celsius</string>
    <string name="settings_f">Fahrenheit</string>
    <string name="settings_temp_celsius_off">Temperatures shown in fahrenheit</string>
    <string name="settings_temp_celsius_on">Temperatures shown in celsius</string>



</resources>
