<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_bar_home" />
        <item
            android:id="@+id/nav_countries"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/nav_bar_countries" />
        <item
            android:id="@+id/nav_cities"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/nav_bar_cities" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_bar_settings"/>
    </group>

</menu>
