<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:isScrollContainer="false"
    tools:context="net.cwalton.mobileassignment.FragmentCity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Header-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/Constraint_CityHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:minHeight="150dp">

            <TextView
                android:id="@+id/tv_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/secondaryColor"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ib_city_notes"
                tools:text="City Name" />

            <ImageButton
                android:id="@+id/ib_city_favourite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_fav_toggle"
                android:src="@drawable/ic_star_border_white_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_city_notes"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_notes"
                android:src="@drawable/ic_edit_white_24dp"
                app:layout_constraintEnd_toStartOf="@+id/ib_city_wiki"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_city_wiki"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_wiki_link"
                android:src="@drawable/ic_language_white_24dp"
                app:layout_constraintEnd_toStartOf="@+id/ib_city_map"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_city_map"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/open_map"
                android:src="@drawable/ic_map_white_24dp"
                app:layout_constraintEnd_toStartOf="@+id/ib_city_favourite"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <!-- Weather card-->
        <android.support.v7.widget.CardView

            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_city_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/Constraint_CityHeader">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/lay_home_weather_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_city_weather_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/home_weather_title"
                    android:textColor="#000"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Weather forecast-->
                <android.support.constraint.ConstraintLayout
                    android:id="@+id/lay_city_weather_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_city_weather_title">


                    <ImageView
                        android:id="@+id/iv_city_weather_icon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/home_iv_weather_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher"
                        />

                    <TextView
                        android:id="@+id/tv_city_weather_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_city_weather_icon"
                        tools:text="Weather Type" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/weather_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_city_weather_type">

                        <TextView
                            android:id="@+id/tv_city_weather_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="8dp"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Temp" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/therm_icon"
                            android:tint="@android:color/darker_gray"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_city_weather_temp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_thermometer" />
                    </android.support.constraint.ConstraintLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


        <!--Details Card-->
        <android.support.v7.widget.CardView

            android:id="@+id/cv_city_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_city_weather">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_city_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/city_details"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:text="City Details" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_city_ofcountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        tools:text="Country" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/city_of_country"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_airport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/city_mainairport"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_city_population" />

                    <TextView
                        android:id="@+id/tv_city_population"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:text="Population Value" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/city_population"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_city_ofcountry" />

                    <ImageButton
                        android:id="@+id/ib_city_airport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/button_airport_map"
                        android:src="@drawable/ic_map_black_24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_city_airport"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_city_airport" />

                    <TextView
                        android:id="@+id/tv_city_airport"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_airport"
                        tools:text="Airport Name" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Notes Card -->
        <android.support.v7.widget.CardView

            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_city_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cv_city_details">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/city_notes"
                    android:textColor="#000"
                    android:textSize="18sp"
                    tools:text="My Notes" />

                <TextView
                    android:id="@+id/tv_city_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Notes" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>


</ScrollView>
